--- a/FCOApplication_Back/app/src/main/AndroidManifest.xml
+++ b/FCOApplication_Back/app/src/main/AndroidManifest.xml
@@ -40,13 +40,35 @@
             -->
         </activity>
         <activity android:name=".GridLayoutActivity">
-          <!--  <intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity android:name=".EditSetGridActivity">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity android:name=".CustomLstViewActivity">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity android:name=".NestingLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
