etudes sur les composant UI-Widget

--- a/FCOApplication_Back/app/src/main/AndroidManifest.xml
+++ b/FCOApplication_Back/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
             -->
         </activity>
         <activity android:name=".CustomLstViewActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -69,6 +70,15 @@
             -->
         </activity>
         <activity android:name=".NestingLayout">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity android:name=".InterfaceWidget">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
