--- a/FCOApplication_Back/app/src/main/AndroidManifest.xml
+++ b/FCOApplication_Back/app/src/main/AndroidManifest.xml
@@ -70,6 +70,7 @@
             -->
         </activity>
         <activity android:name=".NestingLayout">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -79,6 +80,15 @@
             -->
         </activity>
         <activity android:name=".InterfaceWidget">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity android:name=".SpinnerAndCalendar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
