--- a/FCOApplication_Back/app/src/main/AndroidManifest.xml
+++ b/FCOApplication_Back/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        >
         <activity android:name=".MainActivity">
 
             <!--
@@ -80,6 +80,7 @@
             -->
         </activity>
         <activity android:name=".InterfaceWidget">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -89,6 +90,25 @@
             -->
         </activity>
         <activity android:name=".SpinnerAndCalendar">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity android:name=".PickerActivity">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity android:name=".FragmentHosted">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
